src/component/log_viewer/snapshots/envision__component__log_viewer__snapshot_tests__snapshot_search_active.snap
---
source: src/component/log_viewer/snapshot_tests.rs
expression: terminal.backend().to_string()
---
/ con                                                                 
1:● Info 2:● Success 3:● Warning 4:● Error FOLLOW                     
┌────────────────────────────────────────────────────────────────────┐
│✗ Connection timeout                                                │
│✓ Connected to database                                             │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
