src/component/log_viewer/snapshots/envision__component__log_viewer__snapshot_tests__snapshot_with_timestamps.snap
---
source: src/component/log_viewer/snapshot_tests.rs
assertion_line: 81
expression: terminal.backend().to_string()
---
/ Search...                                                           
1:● Info 2:● Success 3:● Warning 4:● Error                            
┌────────────────────────────────────────────────────────────────────┐
│✗ 10:10:15 Connection lost                                          │
│⚠ 10:05:30 Memory high                                              │
│ℹ 10:00:00 Server started                                           │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
