src/component/log_viewer/snapshots/envision__component__log_viewer__snapshot_tests__snapshot_with_title.snap
---
source: src/component/log_viewer/snapshot_tests.rs
expression: terminal.backend().to_string()
---
/ Search...                                                           
1:● Info 2:● Success 3:● Warning 4:● Error FOLLOW                     
┌Application Log (3)─────────────────────────────────────────────────┐
│✗ Failed to connect                                                 │
│⚠ High memory usage                                                 │
│ℹ Started successfully                                              │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
