src/component/log_viewer/snapshots/envision__component__log_viewer__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/log_viewer/snapshot_tests.rs
expression: terminal.backend().to_string()
---
/ Search...                                       
1:● Info 2:● Success 3:● Warning 4:● Error FOLLOW 
✗ Connection timeout                              
⚠ Disk space low                                  
✓ Connected to database                           
ℹ Server started
